<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="fill_horizontal">

    <NumberPicker
            android:id="@+id/number_picker_year"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.2"
            android:descendantFocusability="blocksDescendants" />

    <TextView
            android:id="@+id/text_view_year"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/text_year"
            android:textColor="@color/black" />

    <NumberPicker
            android:id="@+id/number_picker_month"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.15"
            android:descendantFocusability="blocksDescendants" />

    <TextView
            android:id="@+id/text_view_month"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/text_month"
            android:textColor="@color/black" />

    <NumberPicker
            android:id="@+id/number_picker_date"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.15"
            android:descendantFocusability="blocksDescendants" />

    <TextView
            android:id="@+id/text_view_date"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/text_date"
            android:textColor="@color/black" />
</LinearLayout>